# C_exercises

./: CMakeLists.txt  README.md  sandbox.c  sl version
Stage_1/20240408/: demo1.c
Stage_1/20240409/: demo2.c
Stage_1/20240530/: demo1.c  demo2.c
Stage_1/20240531/: demo1.c  demo2.c
Stage_1/20240601/: demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c  demo7.c  demo8.c  demo9.c
Stage_1/20240602/: demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c  demo7.c  demo8.c
Stage_1/20240606/: demo1.c  demo2.c  demo3.c
Stage_1/20240612/: demo1.c
Stage_2/20240612/: demo1.c
Stage_2/20240614/: demo1.c
Stage_2/20240616/: linked_lists.c
