cmake_minimum_required(VERSION 3.27)
project(Study C)

set(CMAKE_C_STANDARD 11)

add_executable(Study
        Stage_1/20240408/demo1.c
        Stage_1/20240409/demo2.c
        Stage_1/20240530/demo1.c
        Stage_1/20240530/demo1.c
        Stage_1/20240530/demo2.c
        Stage_1/20240531/demo1.c
        Stage_1/20240531/demo2.c
        Stage_1/20240601/demo1.c
        Stage_1/20240601/demo2.c
        Stage_1/20240601/demo3.c
        Stage_1/20240601/demo4.c
        Stage_1/20240601/demo5.c
        Stage_1/20240601/demo6.c
        Stage_1/20240601/demo7.c
        Stage_1/20240601/demo8.c
        Stage_1/20240601/demo9.c
        Stage_1/20240601/demo9.c
        Stage_1/20240602/demo1.c
        Stage_1/20240602/demo2.c
        Stage_1/20240602/demo3.c
        Stage_1/20240602/demo4.c
        Stage_1/20240602/demo5.c
        Stage_1/20240602/demo6.c
        Stage_1/20240602/demo7.c
        Stage_1/20240602/demo8.c
        Stage_1/20240606/demo1.c
        Stage_1/20240606/demo2.c
        Stage_1/20240606/demo3.c
        Stage_1/20240612/demo1.c
        Stage_2/20240612/demo1.c
        Stage_2/20240614/demo1.c
        sandbox.c
)
